2007-07-23 [wwp]	2.10.0cvs57

	* src/quote_fmt_lex.l
		Revert accidentaly committed lines (account_sig) in
		2.10.0cvs56.

2007-07-23 [wwp]	2.10.0cvs56

	* src/quote_fmt_lex.l
		Fix typos around long form expressions in the quote lexer.

2007-07-23 [colin]	2.10.0cvs55

	* src/addr_compl.c
		Fix auto-completion on Maemo

2007-07-23 [colin]	2.10.0cvs54

	* src/statusbar.c
		Maemo: Fix sticking statusbars

2007-07-22 [colin]	2.10.0cvs53

	* src/main.c
		Maemo: Fix the strange "top_application" info
		at startup. We should do something when 
		receiving such a message.

2007-07-20 [paul]	2.10.0cvs52

	* src/news_gtk.c
		add missing #include "statusbar.h"

2007-07-20 [colin]	2.10.0cvs51

	* src/folder.c
	* src/folder.h
	* src/folder_item_prefs.c
	* src/folder_item_prefs.h
	* src/folderview.c
	* src/imap.c
	* src/imap_gtk.c
	* src/imap_gtk.h
	* src/news.c
	* src/news_gtk.c
	* src/news_gtk.h
	* src/prefs_folder_item.c
		Implement age-based caching: allow to
		specify a threshold for the offline synchronisation
		feature, and whether old cached bodies should 
		be removed
	* src/toolbar.c
	* src/toolbar.h
		Fix label/tooltips
	* src/plugins/dillo_viewer/dillo_viewer.c
		Check that Dillo's installed

2007-07-20 [wwp]	2.10.0cvs50

	* src/mimeview.c
	* src/stock_pixmap.c
		Draw a frame around the selected mimeview part icon (instead of the
		shifted 'dancing' icon).

2007-07-20 [colin]	2.10.0cvs49

	* src/main.c
		Unref stuff even on error
	* src/wizard.c
		disconnect signals only at the very
		end of the wizard save.

2007-07-20 [colin]	2.10.0cvs48

	* src/mainwindow.c
	* src/messageview.c
	* src/toolbar.c
	* src/toolbar.h
		Fix random crashes while navigating
		(GTK_EVENTS_FLUSH)

2007-07-19 [colin]	2.10.0cvs47

	* configure.ac
	* src/main.c
	* src/prefs_common.c
	* src/prefs_common.h
	* src/wizard.c
	* src/common/defs.h
	* src/common/utils.c
		Maemo: add an easy way to store data (mails
		and IMAP/NNTP caches) on one of the SD cards,