@@ -1,3 +1,12 @@
+2007-07-23 [colin]	2.10.0cvs58
+
+	* src/mimeview.c
+	* src/textview.c
+		Maemo: Automatically choose the correct application
+		to open parts
+	* src/gtk/quicksearch.c
+		Make search run on GDK_KP_Enter too
+
 2007-07-23 [wwp]	2.10.0cvs57
 
 	* src/quote_fmt_lex.l
